Add comment to config.ini and some footages

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,9 @@
+#เปลี่ยน broker
 [MQTT]
 Broker = localhost
 Port = 1883
 Topic = openhouse/checkin-checkout
-
+# เปลี่ยนสถานที่
 [Device]
 Location = Place1
 ScanCooldown = 5
