--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,8 @@
 [MQTT]
-Broker = localhost
+Broker = broker.hivemq.com
 Port = 1883
 Topic = openhouse/checkin-checkout
 [Device]
 Location = Place1
-ScanCooldown = 5
+ScanCooldown = 3
 ReaderSize= 200
